@@ -3,7 +3,7 @@ Goals for next release:
 -----------------------
 * Check object method calls for # args
 * Store types of globals, class attributes, function & method return values
-* Store values of global & local constants
+* Store values of global constants
 * Improve handling when importing packages
 * Add original line warnings for those that refer to another place
 	(e.g., overridden method doesn't match signature)
